# chatbot

./: .gitignore  SPEC.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  prompts.py
backend/app/api/: chat.py  models.py  sessions.py  sse.py  web.py
backend/app/graph/: post_check.py  state.py  workflow.py
backend/app/graph/nodes/: __init__.py  _helpers.py  answer_check.py  debug_explain.py  es_count.py  es_list.py  general_chat.py  generate.py  hybrid_retrieve.py  index_route.py  instruction_save.py  metadata_extract.py  query_analyze.py  query_decompose.py  query_reform.py  query_rewrite.py  query_variate.py  re_search_setup.py  search_intent.py  self_check.py
backend/app/services/: elasticsearch_client.py  instruction_store.py  llm_factory.py  log_store.py
backend/tests/: conftest.py  test_api.py  test_es_query.py  test_helpers.py  test_instruction_store.py  test_llm_factory.py  test_log_store.py  test_nodes.py  test_sessions.py  test_workflow.py
